orcidauthor added to each one of the authors

--- a/template.tex
+++ b/template.tex
@@ -84,10 +84,12 @@
 
 % Author Orchid ID: enter ID or remove command
 \newcommand{\orcidauthorA}{0000-0000-0000-000X} % Add \orcidA{} behind the author's name
+\newcommand{\orcidauthorB}{0000-0000-0000-000X} % Add \orcidA{} behind the author's name
+\newcommand{\orcidauthorC}{0000-0000-0000-000X} % Add \orcidA{} behind the author's name
 %\newcommand{\orcidauthorB}{0000-0000-0000-000X} % Add \orcidB{} behind the author's name
 
 % Authors, for the paper (add full first names)
-\Author{Christian-Antonio Colin-Cejudo$^{1,\dagger,\ddagger}$\orcidA{}, Gonzalo-Issac Duchén-Sánchez $^{2,\ddagger}$ and Gabriel Sánchez-Pérez $^{3,\dagger}$}
+\Author{Christian-Antonio Colin-Cejudo$^{1,\dagger,\ddagger}$\orcidA{}, Gonzalo-Issac Duchén-Sánchez $^{2,\ddagger}$\orcidB{} and Gabriel Sánchez-Pérez $^{3,\dagger}$\orcidC{}}
 
 %\longauthorlist{yes}
 
@@ -117,9 +119,9 @@
 
 % Affiliations / Addresses (Add [1] after \address if there is only one affiliation.)
 \address{%
-$^{1}$ \quad Affiliation 1; christian.upiita@gmai.com\\
-$^{2}$ \quad Affiliation 2; gduchen@ieee.org\\
-$^{3}$ \quad Affiliation 3; caaann@gmail.com}
+$^{1}$ \quad  christian.upiita@gmai.com\\
+$^{2}$ \quad  gduchen@ieee.org\\
+$^{3}$ \quad caaann@gmail.com}
 % Contact information of the corresponding author
 %\corres{Correspondence: e-mail@e-mail.com; Tel.: (optional; include country code; if there are multiple corresponding authors, add author initials) +xx-xxxx-xxx-xxxx (F.L.)}
 
