--- a/template.tex
+++ b/template.tex
@@ -119,7 +119,7 @@
 
 % Affiliations / Addresses (Add [1] after \address if there is only one affiliation.)
 \address{%
-$^{1}$ \quad  christian.upiita@gmai.com\\
+$^{1}$ \quad  christian.upiita@gmail.com\\
 $^{2}$ \quad  gduchen@ieee.org\\
 $^{3}$ \quad caaann@gmail.com}
 % Contact information of the corresponding author
